external-crates/move/crates/move-compiler/tests/move_2024/expansion/use_struct_overlap_with_module.move
module 0x2::X {
    struct S {}
}

module 0x2::M {
    use 0x2::X::{Self, S as X};
    struct A { f1: X, f2: X::S }
}
